@@ -1,4 +1,8 @@
-﻿drkns 19.02.2016 00:08:34 +0200 - build 4552
+﻿w17 19.02.2016 22:31:34 +0300 - build 4553
+
+1. Уточнение 4552, восстановление сборки VS2010.
+
+drkns 19.02.2016 00:08:34 +0200 - build 4552
 
 1. Еще раз на тему Alt+F8 во вьювере:
    - наличие %, h, 0x etc. в строке больше не меняет запомненный режим;
